[gd_scene load_steps=4 format=3 uid="uid://d06xux1eutij8"]

[ext_resource type="Script" path="res://scenes/save/save_station.gd" id="1_kevsj"]
[ext_resource type="Texture2D" uid="uid://cp50hscij2yor" path="res://scenes/entities/environment/collectables/Pedestal.png" id="2_wm682"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y1bdf"]
radius = 63.0079

[node name="SaveStation" type="Node2D"]
script = ExtResource("1_kevsj")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(16, 16)
scale = Vector2(2, 2)
texture = ExtResource("2_wm682")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(16, 17)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_y1bdf")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
